--- a/houtai/templets/index2.htm
+++ b/houtai/templets/index2.htm
@@ -46,12 +46,12 @@
     <div class="top_logo"> <img src="images/logo1.png" width="200" height="45" alt="DedeCms Logo" title="Welcome use DedeCms" id="topdedelogo" /> </div>
     <div class="top_link" style="height: 100%;">
       <ul>
-        <li><a href="article_add.php?channelid=1" target="main" style="padding: 15px;font-size: 13px;border: 0;">添加文档</a></li>
+        <!--<li><a href="article_add.php?channelid=1" target="main" style="padding: 15px;font-size: 13px;border: 0;">添加文档</a></li>-->
         <li><a href="content_list.php" target="main" style="padding: 15px;font-size: 13px;border: 0;">文档列表</a></li>
-        <li><a href="feedback_main.php" target="main" style="padding: 15px;font-size: 13px;border: 0;">评论管理</a></li>
-        <li><a href="public_guide.php" target="main" style="padding: 15px;font-size: 13px;border: 0;">内容发布</a></li>
-        <li><a href="catalog_main.php" target="main" style="padding: 15px;font-size: 13px;border: 0;">栏目管理</a></li>
-        <li><a href="sys_info.php" target="main" style="padding: 15px;font-size: 13px;border: 0;">修改参数</a></li>
+        <!--<li><a href="feedback_main.php" target="main" style="padding: 15px;font-size: 13px;border: 0;">评论管理</a></li>-->
+        <!--<li><a href="public_guide.php" target="main" style="padding: 15px;font-size: 13px;border: 0;">内容发布</a></li>-->
+        <!--<li><a href="catalog_main.php" target="main" style="padding: 15px;font-size: 13px;border: 0;">栏目管理</a></li>-->
+        <!--<li><a href="sys_info.php" target="main" style="padding: 15px;font-size: 13px;border: 0;">修改参数</a></li>-->
       </ul>
       <div class="quick"> <a href="index.php" class="ac_qucikmenu" id="ac_qucikmenu"><?php echo $cuserLogin->getUserName(); ?> </a></div>
     </div>
