--- a/houtai/templets/article_edit.htm
+++ b/houtai/templets/article_edit.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=<?php echo $cfg_soft_lang; ?>">
@@ -231,6 +231,7 @@ function delAlbPicOld(picfile, pid){
           </div>
         </div>
     </div>
+  <!--
 <table width="98%" border="0" align="center" cellpadding="0" cellspacing="0">
   <tr>
     <td width="60%" height="30"><IMG height=14 src="images/book1.gif" width=20>&nbsp;<a href="catalog_do.php?cid=<?php echo $arcRow['typeid']?>&channelid=<?php echo $channelid?>&dopost=listArchives"><u>文章列表</u></a> &gt;&gt; 更改文章</td>
@@ -238,6 +239,8 @@ function delAlbPicOld(picfile, pid){
     <td width="1%">&nbsp;</td>
   </tr>
 </table>
+-->
+<!--
 <table width="98%" border="0" align="center" cellpadding="0" cellspacing="0" id="head1">
   <tr>
     <td colspan="2"><table border="0" cellpadding="0" cellspacing="0">
@@ -257,12 +260,13 @@ function delAlbPicOld(picfile, pid){
         </tr>
       </table></td>
   </tr>
-</table>
+</table>-->
 <form name="form1" action="article_edit.php" enctype="multipart/form-data" method="post" onSubmit="return checkSubmit();">
   <input type="hidden" name="dopost" value="save" />
   <input type="hidden" name="channelid" value="<?php echo $channelid?>" />
   <input type="hidden" name="id" value="<?php echo $aid?>" />
-<!--标题-->
+
+  <!--标题-->
     <div style="width: 99%;height: 99%" >
   <div id="needset" style="margin-left: 1%; border-top: 3px solid #dd4b39;padding:15px;border-radius:5px;background-color: white;width: 46%;display: flex;flex-direction: column;float: left">
 
@@ -271,16 +275,18 @@ function delAlbPicOld(picfile, pid){
                 <label style="font-size: 14px"><br/>简略标题：</label>
                 <input name="shorttitle" type="text" id="shorttitle" style="width:98%;height:35%;"  value="<?php echo $arcRow['shorttitle']; ?>">
       <br/>文章来源：
-               <div style="display: flex;flex-direction: row;">
-               <input name="source" type="text" id="source" style="width:80%;height:35%;" value="<?php echo $arcRow["source"]?>" size="16">
-               <input name="selsource" type="button" id="selsource" value="选择" style="margin-left: 2%;background-color: #ffffff;
+               <div style="display: flex;flex-direction: row;width: 100%;height: 35%">
+               <input name="source" type="text" id="source" style="width:98%;height:35%;" value="<?php echo $arcRow["source"]?>" size="16">
+               &nbsp;&nbsp;
+               <input name="selsource" type="button" id="selsource" value="选择" style="background-color: #ffffff;width: 70px;height: 27px;
     border-color: #dd4b39;padding:0;vertical-align:middle;border-radius: 3px;
-               background-color: #ffffff;width: 70px;height:auto" /></div>
+               background-color: #ffffff;" /></div>
       <br/>作者：
-               <div style="display: flex;flex-direction: row;" >
-               <input name="writer" type="text" id="writer" style="width:80%;height:35%" value="<?php echo $arcRow["writer"]?>">
-               <input name="selwriter" type="button" id="selwriter" value="选择" style="margin-left: 2%; background-color: #ffffff;
-    border-color: #c64333; padding:0;vertical-align:middle;border-radius: 3px;background-color: #ffffff;width:70px;height:auto" /></div>
+               <div style="display: flex;flex-direction: row;width: 100%;height: 35%" >
+               <input name="writer" type="text" id="writer" style="width:98%;height:35%" value="<?php echo $arcRow["writer"]?>">
+               &nbsp;&nbsp;
+               <input name="selwriter" type="button" id="selwriter" value="选择" style= "background-color: #ffffff;
+    border-color: #c64333; padding:0;vertical-align:middle;border-radius: 3px;background-color: #ffffff;width: 70px;height: 27px;" /></div>
 
       <div>
           <label style="font-size: 14px"> <br/>TAG标签：(','号分开，单个标签小于12字节)</label>
@@ -294,7 +300,7 @@ function delAlbPicOld(picfile, pid){
  <!--右边-->
   <div style="display: flex;flex-direction: column;float: left;width:46%;margin-left: 2%;">
   <!--栏目-->
-  <div style="width: 100%;height: inherit;padding:3%;border-top: 3px solid #f39c12;border-radius:5px;background-color: white;float: left;margin-bottom: 3%;margin-top: -2%;margin-right: -2%;">
+  <div style="width: 100%;height: inherit;padding:3%;border-top: 3px solid #f39c12;border-radius:5px;background-color: white;float: left;margin-bottom: 2%;margin-right: -2%;">
       文章主栏目：
       <div style=" width: 100%;
     height: 35%;
@@ -302,19 +308,20 @@ function delAlbPicOld(picfile, pid){
     flex-direction: row;">
                       <?php
             $typeOptions = GetOptionList($arcRow['typeid'],$cuserLogin->getUserChannel(),$channelid);
-                          echo "<select name='typeid' id='typeid' style='width:80%;height:35%; background-color: white;
-    border: 1px solid #f39c12;'>\r\n";
+                          echo "<select name='typeid' id='typeid' style='width:85%;height:35%; background-color: white;
+    border: 1px solid #d2d6de;    border-radius: 3px;'>\r\n";
                               if($arcRow["typeid"]=="0") echo "<option value='0' selected>请选择栏目...</option>\r\n";
                               echo $typeOptions;
                               echo "</select>";
                           ?>
+          <div style="width:15%;height:35%">
                           <img src='images/searchall.png' style='
-cursor:pointer
+cursor:pointer;
     width: auto;
     height: 24px;
     padding: 0;
     vertical-align: middle;
-    margin-left: 5px; ' onClick="ShowCatMap(event, this, <?php echo $channelid; ?>, 'typeid', '<?php echo $arcRow['typeid']; ?>')" alt='快捷选择' title='快捷选择' />
+    margin-left: 5px; ' onClick="ShowCatMap(event, this, <?php echo $channelid; ?>, 'typeid', '<?php echo $arcRow['typeid']; ?>')" alt='快捷选择' title='快捷选择' /></div>
                           <?php
      			 if($cfg_remote_site=='Y')
      			 {
@@ -337,15 +344,20 @@ if($cfg_need_typeid2=='Y') {
     height: 35%;
     display: flex;
     flex-direction: row;">
-                      <!--   <span id='typeid2ct'></span> -->
-                      <input type='text' style="width: 80%;height: 24px;" name='typeid2' id='typeid2' value='<?php echo ($arcRow['typeid2']=='0' ? '' : $arcRow['typeid2']); ?>' style='width:85%;height:40%;' />
-                      <img src='images/searchall.png' style='cursor:pointer
+                      <div style="width:85%;height: 100%;">
+                      <span id='typeid2ct' style="width: 80%;height: inherit;"></span>
+                      <input type='text' style="width: 100%;height: 24px;" name='typeid2' id='typeid2' value='<?php echo ($arcRow['typeid2']=='0' ? '' : $arcRow['typeid2']); ?>' style='width:85%;height:90%;' />
+                      </div>
+                      <div style="width: 15%;height: 100%;">
+                          <img src='images/searchall.png' style='cursor:pointer;
     width: auto;
     height: 24px;
     padding: 0;
     vertical-align: middle;
-    margin-left: 5px; '
+    margin-left:5px;'
+
                            onClick="ShowCatMap(event, this, <?php echo $channelid; ?>, 'typeid2', '<?php echo $arcRow['typeid2']; ?>')" alt='选择副栏目' title='选择副栏目' /></td>
+                      </div>
                   </div>
 
       <?php } ?>
@@ -376,32 +388,36 @@ if($cfg_need_typeid2=='Y') {
           }
           ?>
       </div>
+
       <!--跳转网址-->
-      <div id="redirecturltr" style="display:<?php echo (empty($addRow['redirecturl']) ? 'none' : 'block');?>">
+     <!--<div id="redirecturltr" style="display:<?php echo (empty($addRow['redirecturl']) ? 'none' : 'block');?>">
           &nbsp;跳转网址：
           <div>
               <input name="redirecturl" type="text" id="redirecturl" style="width:300px" value="<?php echo $addRow["redirecturl"]?>" />
           </div>
-      </div>
+      </div>-->
+
       <div colspan="2"><?php
       PrintAutoFieldsEdit($cInfos['fieldset'],$addRow,'autofield');
       ?></div>
   </div>
     <!--缩略图-->
       <div id="pictable" style="width: 100%;height: inherit;border-top: 3px solid #03a75c;border-radius:5px;background-color: white; padding: 3%;float: left;margin-right: -2%;">
-          <div>
+          <div style="width: 100%;height: inherit">
             &nbsp;缩 略 图<input name="picname" type="text" id="picname" style="width:98%;height:35%;" value="<?php echo $arcRow["litpic"]?>">
              &nbsp;
-              <div style="vertical-align: middle;display: flex;flex-direction: row;">
+              <div style="vertical-align: middle;display: flex;flex-direction: row;width:100%;height:35%;">
+              <div style="width: 70%;height: 35%">
               <input type="button" class='button1' name="Submit" value="浏览..." style="width:70px;height: 27px;padding: 0;border-radius: 3px;background-color: #ffffff;border-color: #008d4c;"" onClick="SelectImage('form1.picname','');">
               <input type="button" class='button1' name="Submit2" value="裁剪" style="width: 70px;height: 27px;padding: 0;margin-left:8px;border-radius: 3px;background-color: #ffffff;border-color: #008d4c;" onClick="imageCut('picname');" class='np coolbg'/>
-              <input type='checkbox' class='np' name='ddisremote' value='1'/>
+              <input style="" type='checkbox' class='np' name='ddisremote' value='1'/>
                远程
-                  <img style="padding: 0;margin:  0 0 0 9%;" src="<?php if($arcRow["litpic"]!="") echo $arcRow["litpic"]; else echo "images/pview.gif";?>" width="35%" height="20%" id="picview" name="picview">
+              </div>
+                  <img style=" padding: 0;" src="<?php if($arcRow["litpic"]!="") echo $arcRow["litpic"]; else echo "images/pview.gif";?>" width="140px" height="100px" id="picview" name="picview">
               </div>
           </div>
           &nbsp;
-          <div style="margin-top:-5%; ">
+          <div style="margin-top:-10.5%; ">
               附加选项：
               <div>
                   <input name="remote" type="checkbox" class="np" id="remote" value="1" checked>
@@ -601,10 +617,11 @@ if($cfg_need_typeid2=='Y') {
   </table>
 
 
-  <div style="display: flex;flex-direction: row;float: left;margin-top: 3%;margin-bottom:3%; position: relative;
+  <div style="    justify-content: space-around;width:25%;display: flex;flex-direction: row;float: left;margin-top: 6%;margin-bottom:3%; position: relative;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);">
+
                   <span class="previewPage">预览</span>&nbsp;
                   <input type="button" name="imageField" value="提交"  class="np" style="padding:0;width: 60px;height: 35px;display: block;
                   border-radius: 3px;background: rgb(0,153,204); line-height: 35px;cursor: pointer;color: white;">&nbsp;
